--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@angular/core": "~11.0.3",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.3",
+    "@angular/localize": "~11.0.3",
     "@angular/material": "^11.0.1",
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "bootstrap": "^4.5.0",
     "material": "^0.4.3",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
