--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/core": "~11.0.3",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.3",
+    "@angular/google-maps": "^11.0.0",
     "@angular/localize": "~11.0.3",
     "@angular/material": "^11.0.1",
     "@angular/platform-browser": "~11.0.3",
@@ -40,6 +41,7 @@
     "@angular/compiler-cli": "~11.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/googlemaps": "3.39.14",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
