--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~11.0.3",
     "@angular/cdk": "^11.0.1",
     "@angular/common": "~11.0.3",
