--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "all": "npm i; npm audit --force; npm run hmr",
     "hmr": "ng serve --hmr",
+    "host": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,6 +31,7 @@
     "@angular/router": "~11.0.3",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
     "material": "^0.4.3",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
@@ -40,9 +42,10 @@
     "@angular-devkit/build-angular": "~0.1100.3",
     "@angular/cli": "~11.0.3",
     "@angular/compiler-cli": "~11.0.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
     "@types/googlemaps": "3.39.14",
+    "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.5",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
