--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
-    "@angular/cli": "~11.0.3",
+    "@angular/cli": "^11.1.4",
     "@angular/compiler-cli": "~11.0.3",
     "@types/googlemaps": "3.39.14",
     "@types/jasmine": "~3.6.0",
